--- a/Calculator/styles/calcApp.css
+++ b/Calculator/styles/calcApp.css
@@ -47,13 +47,13 @@ section{
     background-color: rgba(0, 0, 0, 0.75);
     border-radius: 10px;
 }
-.display .display-1{
+/* .display .display-1{
     color: rgba(255,255, 255, 0.75);
-    font-size: 1.5rem;
+    font-size: 2.5rem;
     opacity: 0.4;
-  }
+  } */
 
-  .display .display-2{
+  .display .display-1{
     color: white;
     font-size: 2.5rem;
   }
