--- a/Calculator/styles/calcApp.css
+++ b/Calculator/styles/calcApp.css
@@ -32,7 +32,8 @@ section{
     top: 40px;
     font-size: 16px;
 }
-.display{
+
+  .display-1{
     display: flex;
     align-items: flex-end;
     justify-content: space-around;
@@ -46,14 +47,6 @@ section{
     text-align: right;
     background-color: rgba(0, 0, 0, 0.75);
     border-radius: 10px;
-}
-/* .display .display-1{
-    color: rgba(255,255, 255, 0.75);
-    font-size: 2.5rem;
-    opacity: 0.4;
-  } */
-
-  .display .display-1{
     color: white;
     font-size: 2.5rem;
   }
