--- a/Calculator/styles/calcApp.css
+++ b/Calculator/styles/calcApp.css
@@ -40,7 +40,7 @@ section{
     flex-direction: column;
     padding: 10px;
     width: 100%;
-    height: 70px;
+    height: 80px;
     margin-bottom: 10px;
     padding: 20px;
     font-size: 30px;
@@ -49,6 +49,8 @@ section{
     border-radius: 10px;
     color: white;
     font-size: 2.5rem;
+    word-wrap: break-word;
+    word-break: break-all;
   }
 .all-buttons{
     display: grid;
